@@ -1,87 +1,133 @@
 package com.pickone.global.security.model.entity;
 
 import com.pickone.domain.user.model.entity.UserEntity;
-import lombok.Getter;
-import org.springframework.security.core.userdetails.UserDetails;
+import com.pickone.domain.user.model.vo.*;
+import com.pickone.domain.user.model.domain.Role;
+import lombok.*;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.oauth2.core.user.OAuth2User;
 
 import java.time.LocalDateTime;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 @Getter
 public class UserPrincipal implements UserDetails, OAuth2User {
+  private final Long id;
+  private final String email;
+  private final String password;
+  private final String nickname;
+  private final Role role;
 
-  private final UserEntity user;
+  private final boolean isActive;
+  private final boolean isLocked;
+  private final boolean isVerified;
+  private final LocalDateTime credentialsExpiredAt;
+
+  // 프로필/상태/선호/인증/보안 정보
+  private final UserProfile profile;
+  private final UserStatus status;
+  private final UserPreference preference;
+  private final UserAuthInfo authInfo;
+  private final SecurityInfo securityInfo;
+
+  // OAuth2User 인터페이스 필드
   private final Map<String, Object> attributes;
 
-  public UserPrincipal(UserEntity user) {
-    this(user, Collections.emptyMap());
-  }
-
-  public UserPrincipal(UserEntity user, Map<String, Object> attributes) {
-    this.user = user;
-    this.attributes = attributes;
+  @Builder // builder 내부 protected 또는 package-private 권장
+  public UserPrincipal(Long id,
+      String email,
+      String password,
+      String nickname,
+      Role role,
+      boolean isActive,
+      boolean isLocked,
+      boolean isVerified,
+      LocalDateTime credentialsExpiredAt,
+      UserProfile profile,
+      UserStatus status,
+      UserPreference preference,
+      UserAuthInfo authInfo,
+      SecurityInfo securityInfo,
+      Map<String, Object> attributes // 추가
+  ) {
+    this.id = id;
+    this.email = email;
+    this.password = password;
+    this.nickname = nickname;
+    this.role = role;
+    this.isActive = isActive;
+    this.isLocked = isLocked;
+    this.isVerified = isVerified;
+    this.credentialsExpiredAt = credentialsExpiredAt;
+    this.profile = profile;
+    this.status = status;
+    this.preference = preference;
+    this.authInfo = authInfo;
+    this.securityInfo = securityInfo;
+    this.attributes = attributes != null ? attributes : Collections.emptyMap();
   }
 
   public static UserPrincipal from(UserEntity user) {
-    return new UserPrincipal(user);
+    return from(user, null);
   }
 
   public static UserPrincipal from(UserEntity user, Map<String, Object> attributes) {
-    return new UserPrincipal(user, attributes);
+    return UserPrincipal.builder()
+        .id(user.getId())
+        .email(user.getProfile().getEmail())
+        .password(user.getAuthInfo().getPassword())
+        .nickname(user.getProfile().getNickname())
+        .role(user.getRole())
+        .isActive(user.getStatus().isActive())
+        .isLocked(user.getStatus().isLocked())
+        .isVerified(user.getStatus().isVerified())
+        .credentialsExpiredAt(user.getStatus().getCredentialsExpiredAt())
+        .profile(user.getProfile())
+        .status(user.getStatus())
+        .preference(user.getPreference())
+        .authInfo(user.getAuthInfo())
+        .securityInfo(user.getSecurityInfo())
+        .attributes(attributes)
+        .build();
   }
 
   @Override
   public Collection<? extends GrantedAuthority> getAuthorities() {
-    return List.of(() -> "ROLE_" + user.getRole().name());
+    return Collections.singletonList((GrantedAuthority) () -> role.name());
   }
 
   @Override
-  public String getPassword() {
-    return user.getProfile().getPassword();
-  }
-
-  @Override
-  public String getUsername() {
-    return user.getProfile().getEmail();
-  }
+  public String getUsername() { return email; }
 
   @Override
   public boolean isAccountNonExpired() {
-    return user.getStatus().isActive();
+    return credentialsExpiredAt == null || credentialsExpiredAt.isAfter(LocalDateTime.now());
   }
 
   @Override
   public boolean isAccountNonLocked() {
-    return !user.getStatus().isLocked();
+    return !isLocked;
   }
 
   @Override
   public boolean isCredentialsNonExpired() {
-    LocalDateTime expiredAt = user.getStatus().getCredentialsExpiredAt();
-    return expiredAt == null || expiredAt.isAfter(LocalDateTime.now());
+    return isAccountNonExpired();
   }
 
   @Override
   public boolean isEnabled() {
-    return user.getStatus().isVerified();
+    return isActive && isVerified;
   }
 
+  // OAuth2User 인터페이스 구현
   @Override
   public Map<String, Object> getAttributes() {
-    return attributes;
+    return attributes != null ? attributes : Collections.emptyMap();
   }
 
   @Override
   public String getName() {
-    return user.getProfile().getEmail();
-  }
-
-  public Long getUserId() {
-    return user.getId();
+    return email != null ? email : String.valueOf(id);
   }
 }
